Pinned nav to a fixed position allowing it to stay on top while the page scrolls. Adjusted each made with an additional div wrapper to allow for spacing below the nav bar when navigated too.

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,11 +1,14 @@
 @import "../../vars.css";
 
+.anchorContainer {
+  padding-top: 5.375rem;
+}
+
 .container {
   position: relative;
   background-color: rgba(12, 12, 12, 0.6);
   border-radius: 0.9375rem;
   padding: 2.5rem;
-  margin-top: 8.0625rem;
   z-index: 1;
   margin-left: 10%;
   margin-right: 10%;
