--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -1,8 +1,11 @@
 @import "../../vars.css";
 
+.anchorContainer {
+  padding-top: 5.375rem;
+}
+
 .container {
   color: var(--color-text);
-  margin-top: 4.9375rem;
   margin-left: 10%;
   margin-right: 10%;
 }
@@ -19,7 +22,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin-top: 0.875rem;
+  margin-top: 2.3125rem;
 }
 
 .skills {
