--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 3.0625rem;
+  margin-top: 7.5rem;
   z-index: 1;
   margin-left: 10%;
   margin-right: 10%;
